add llvm/install to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -61,3 +61,4 @@ autoconf/autom4te.cache
 /clang/utils/analyzer/projects/*/PatchedSource
 /clang/utils/analyzer/projects/*/ScanBuildResults
 /clang/utils/analyzer/projects/*/RefScanBuildResults
+llvm/install/
